--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,7 +35,7 @@ jobs:
           password: ${{ secrets.CR_PAT }}
           registry: ${{ env.GCR_HOSTNAME }}
           repository: ${{ github.repository }}
-          tags: ${{ steps.craft_tag.outputs.image_tag }}
+          tags: build
           build_args: BUILDKIT_INLINE_CACHE=1
           cache_froms: ${{ env.GCR_HOSTNAME }}/${{ github.repository }}:build
 
