--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,6 +26,7 @@ jobs:
           password: ${{ secrets.CR_PAT }}
           registry: ${{ env.GCR_HOSTNAME }}
           repository: ${{ github.repository }}
+          target: build
           tags: build
           build_args: BUILDKIT_INLINE_CACHE=1
           cache_froms: ${{ env.GCR_HOSTNAME }}/${{ github.repository }}:build
