--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build and cache first stage (build environment)
+      - name: Build and cache first build stage
         # update the first stage cache only when pushing to or tagging main
         if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@v1
@@ -33,7 +33,7 @@ jobs:
           build_args: BUILDKIT_INLINE_CACHE=1
           cache_froms: ${{ env.GCR_HOSTNAME }}/${{ github.repository }}:build
 
-      - name: Build the final product (live artifact)
+      - name: Build the container image
         uses: docker/build-push-action@v1
         env:
           # use BuildKit to speed up builds and improve caching
